fixed sideeffect scrollbars in the default webtrees interactive-treeview

--- a/src/sass/_huhwtXT_tree.scss
+++ b/src/sass/_huhwtXT_tree.scss
@@ -88,8 +88,7 @@ table.tv_tree td.tv_vline_b {
     /* customizable: image color must be the same color than div.tv_vline and div.tv_hline */
 }
 
-table.tv_tree td.tv_vline_c,
-.tv_in table.tv_tree td.tv_vline_h {
+table.tv_tree td.tv_vline_c {
     vertical-align: middle;
 }
 
